# cpp-frp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  test-coverage.sh
cpp-frp/: CMakeLists.txt  cpp-frp.sln  cpp-frp.vcxproj  cpp-frp.vcxproj.filters
cpp-frp/include/frp/: execute_on.h  vector_view.h
cpp-frp/include/frp/internal/: namespace_alias.h  operator.h
cpp-frp/include/frp/push/: filter.h  map.h  map_cache.h  repository.h  sink.h  source.h  transform.h  variable.h
cpp-frp/include/frp/push/internal/: operator.h
cpp-frp/include/frp/static/push/: filter.h  map.h  map_cache.h  repository.h  sink.h  source.h  transform.h
cpp-frp/include/frp/util/: collector.h  function.h  list.h  observable.h  observe_all.h  reference.h  storage.h  task_queue.h  thread_pool.h  variadic.h  vector.h  vector_view.h
cpp-frp/src/: dummy.cpp
sidescroller/: Dependencies.props  sidescroller.vcxproj  sidescroller.vcxproj.filters
sidescroller/include/: cache.h  geometry.h
sidescroller/src/: main.cpp
test/: CMakeLists.txt  Dependencies.props  collector-test.cpp  map_cache-test.cpp  test.vcxproj  test.vcxproj.filters
test/include/: array_util.h  task_queue.h  test_types.h  thread_pool.h
test/src/: collector-test.cpp  example-test.cpp  filter-test.cpp  list-test.cpp  map-test.cpp  map_cache-test.cpp  source-sink-test.cpp  threading-test.cpp  transform-test.cpp  vector-test.cpp
